@@ -18,12 +18,13 @@ from rest_framework import permissions
 from rest_framework import renderers 
 from rest_framework.response import Response
 
+from core.weixin.mixins import WeixinAuthMixin
+
 from flashsale.pay.options import get_user_unionid,valid_openid
+from flashsale.pay.models import PayInfoMethodMixin
 from flashsale.xiaolumm.models import XiaoluMama
 from shopapp.weixin.models import WeiXinUser
 from shopback.items.models import Product
-
-from core.weixin.mixins import WeixinAuthMixin
 
 import logging
 logger = logging.getLogger('django.request')
@@ -38,6 +39,7 @@ class MamaRegisterView(WeixinAuthMixin,APIView):
     def get_deposite_product(self):
         return Product.objects.get(id=2731)
     
+    
     def get(self, request, mama_id):
         openid,unionid = self.get_openid_and_unionid(request)
         if not valid_openid(openid) or not valid_openid(unionid):
@@ -46,31 +48,31 @@ class MamaRegisterView(WeixinAuthMixin,APIView):
         
         wx_user,state = WeiXinUser.objects.get_or_create(openid=openid)
         try:
-            product = None
             xiaolumm = XiaoluMama.objects.get(openid=unionid)
-            if xiaolumm.progress == XiaoluMama.PASS:
-                return redirect(reverse('mama_homepage'))
-            
-            if xiaolumm.progress == XiaoluMama.PROFILE:
-                self.template_name = 'apply/mama_deposit.html'
-                product = self.get_deposite_product()
-                
-            elif xiaolumm.progress == XiaoluMama.PAY:
-                self.template_name = 'apply/mama_contact.html'
-                try:
-                    referal_mama = XiaoluMama.objects.get(mobile=xiaolumm.referal_from)
-                    username = User.objects.get(id=referal_mama.manager).username
-                except (XiaoluMama.DoesNotExist, User.DoesNotExist):
-                    username = ''
-            
         except XiaoluMama.DoesNotExist: 
             xiaolumm = None
         except Exception,exc:
             logger.error(exc.message,exc_info=True)
             raise exc
         
-        return Response({'wxuser':wx_user,'xlmm':xiaolumm,'product':product})
+        if xiaolumm.progress == XiaoluMama.PASS:
+            return redirect(reverse('mama_homepage'))
         
+        if xiaolumm.progress == XiaoluMama.PROFILE:
+            self.template_name = 'apply/mama_deposit.html'
+            product = self.get_deposite_product()
+            return Response({'wxuser':wx_user,'xlmm':xiaolumm,'product':product})
+            
+        elif xiaolumm.progress == XiaoluMama.PAY:
+            self.template_name = 'apply/mama_contact.html'
+            try:
+                referal_mama = XiaoluMama.objects.get(mobile=xiaolumm.referal_from)
+                username = User.objects.get(id=referal_mama.manager).username
+            except (XiaoluMama.DoesNotExist, User.DoesNotExist):
+                username = ''
+            return Response({'wxuser':wx_user,'xlmm':xiaolumm})
+            
+            
     def post(self,request, mama_id):
         content = request.REQUEST
         openid  = content.get('openid')
@@ -78,7 +80,7 @@ class MamaRegisterView(WeixinAuthMixin,APIView):
 #         nickname  = content.get('nickname')
 
         wx_user = get_object_or_404(WeiXinUser,openid=openid)
-        if not wx_user.isValid() or not valid_openid(unionid) :#or not nickname
+        if not wx_user.isValid() or not valid_openid(unionid):#or not nickname
             return redirect('./')
         
         xlmm, state = XiaoluMama.objects.get_or_create(openid=unionid)
@@ -94,6 +96,27 @@ class MamaRegisterView(WeixinAuthMixin,APIView):
         return render_to_response("mama_deposit.html", 
                                   {'wxuser':wx_user,'xlmm':xlmm},
                                   context_instance=RequestContext(request))
+        
+class PayDepositeView(PayInfoMethodMixin, APIView):
+    
+    authentication_classes = (authentication.TokenAuthentication,)
+    permission_classes = (permissions.IsAuthenticated,)
+    renderer_classes = (renderers.JSONRenderer,)
+    
+    def post(self,request):
+        content = request.REQUEST
+        openid  = content.get('openid')
+        unionid = content.get('unionid')
+        
+        wx_user = get_object_or_404(WeiXinUser,openid=openid)
+        if not wx_user.isValid():
+            return redirect('./')
+        
+        xlmm = get_object_or_404(XiaoluMama,openid=unionid,progress=XiaoluMama.PAY)
+        xlmm.progress = XiaoluMama.PASS
+        xlmm.save()
+        
+        return Response({})
         
         
 class MamaConfirmView(APIView):
